--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,15 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit",
+        "test": [
+            "vendor/bin/phpunit",
+            "vendor/bin/php-cs-test",
+            "vendor/bin/php-tlint-test .",
+            "vendor/bin/php-md-test ./src",
+            "vendor/bin/php-insights-test",
+            "vendor/bin/php-mn-test",
+            "vendor/bin/php-stan-test"
+        ],
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     },
     "config": {
