--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         },
         {
             "name": "Tom Witkowski",
-            "email": "dev.gummibeer@gmail.com",
+            "email": "twitkowski@elbgoods.de",
             "homepage": "https://gummibeer.de",
             "role": "Developer"
         }
